--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<h3 class="covers">Projects</h3>
 				<div class="grid">
 					<div class="Article1"></div>
-					<div class="Article2">I have worked in multiple prototype games as a Video Game designer. 
+					<div class="Article2">I have worked on in multiple prototype games as a Video Game designer. 
 					Such as Unwanted Dream and Shackled.</div>
 				</div>
 			</div>
