--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <!-- hijacking: on/off - animation: none/scaleDown/rotate/gallery/catch/opacity/fixed/parallax -->
 <!---->
 
-<body data-hijacking="on" data-animation="scaleDown">
+<body data-hijacking="off" data-animation="scaleDown">
 	<!--ALGO QUE TE MUEVA ENTERE SECTIONS-->
 	<section class="cd-section visible">
 		<div>
-				<div class="portada"><span class="jittery">Jaime Hall Muguruza</span></div>
+			<div>
+				<div class="portada"> <span>Jaime Hall </span> </div>
+			</div>
 		</div>
 	</section>
 	<section class="cd-section">
 		<div>
 			<div>
-				<h3 class="covers">About</h3>
+				<h3 class="covers">About Me</h3>
 				<div class="grid">
-					<div class="Article1">I´m Jaime Rowland Hall Muguruza and currently a Freelancer. 
-					I´m now studying Interactive Game Design at U-TAD.</div>
-					<div class="Article2"></div>
+					<div class="Article1">I´m Jaime Rowland Hall Muguruza and currently a Freelancer.</div>
 				</div>
 			</div>
 		</div>
@@ -35,11 +35,9 @@
 	<section class="cd-section">
 		<div>
 			<div>
-				<h3 class="covers">Projects</h3>
+				<h3 class="covers">Working On...</h3>
 				<div class="grid">
-					<div class="Article1"></div>
-					<div class="Article2">I have worked on in multiple prototype games as a Video Game designer. 
-					Such as Unwanted Dream and Shackled.</div>
+					<div class="Article1">I´m now studying Interactive Game Design at U-TAD.</div>
 				</div>
 			</div>
 		</div>
@@ -47,11 +45,12 @@
 	<section class="cd-section">
 		<div>
 			<div>
-				<h3 class="covers">Contact</h3>
+				<h3 class="covers">Contact Me</h3>
 				<div class="grid">
-					<div class="Article1"><a href="mailto:jaime.hall.work@gmail.com" title="Jaime Hall Mail">jaime.hall.work@gmail.com</a>
+					<div class="Article1"><a href="mailto:jaime.hall.work@gmail.com"
+							title="Jaime Hall Mail">E-mail:jaime.hall.work@gmail.com</a>
+						<p>Phone:+34661846744</p>
 					</div>
-					<div class="Article2"> <a href="www.linkedin.com/in/jaime-hall-muguruza-a77a58b9">www.linkedin.com/in/jaime-hall-muguruza-a77a58b9</a></div>
 				</div>
 			</div>
 		</div>
