--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en" class="no-js">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,9 +16,7 @@
 	<!--ALGO QUE TE MUEVA ENTERE SECTIONS-->
 	<section class="cd-section visible">
 		<div>
-			<div>
-				<div class="portada"> <span>Jaime Hall </span> </div>
-			</div>
+				<div class="portada"> Jaime Rowland Hall Muguruza </div>
 		</div>
 	</section>
 	<section class="cd-section">
@@ -48,7 +45,7 @@
 				<h3 class="covers">Contact Me</h3>
 				<div class="grid">
 					<div class="Article1"><a href="mailto:jaime.hall.work@gmail.com"
-							title="Jaime Hall Mail">E-mail:jaime.hall.work@gmail.com</a>
+							title="Jaime Hall Mail">Mail:jaime.hall.work@gmail.com</a>
 						<p>Phone:+34661846744</p>
 					</div>
 				</div>
@@ -68,6 +65,12 @@
 	<script src="js/velocity.min.js"></script>
 	<script src="js/velocity.ui.min.js"></script>
 	<script src="js/main.js"></script> <!-- Resource jQuery -->
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=Acme&display=swap');
+		</style>
+		<style>
+			@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
+			</style>
 </body>
 
 </html>
