Correción_sin_imagenes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" class="no-js">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,22 +17,24 @@
 	<!--ALGO QUE TE MUEVA ENTERE SECTIONS-->
 	<section class="cd-section visible">
 		<div>
-				<div class="portada"> Jaime Rowland Hall Muguruza </div>
+			<div class="portada"> Jaime Rowland Hall Muguruza </div>
 		</div>
 	</section>
 	<section class="cd-section">
 		<div>
-			<div>
+			<div class="About">
 				<h3 class="covers">About Me</h3>
 				<div class="grid">
-					<div class="Article1">I´m Jaime Rowland Hall Muguruza and currently a Freelancer.</div>
+					<div class="Article1">Currently a Freelancer. I have worked on multiple jobs such as accounting and ice cream selling.</div>
+					<div class="smooy"></div>
+					<div class="IEC"></div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<section class="cd-section">
 		<div>
-			<div>
+			<div class="Working">
 				<h3 class="covers">Working On...</h3>
 				<div class="grid">
 					<div class="Article1">I´m now studying Interactive Game Design at U-TAD.</div>
@@ -41,7 +44,7 @@
 	</section>
 	<section class="cd-section">
 		<div>
-			<div>
+			<div class="Contact">
 				<h3 class="covers">Contact Me</h3>
 				<div class="grid">
 					<div class="Article1"><a href="mailto:jaime.hall.work@gmail.com"
@@ -67,10 +70,10 @@
 	<script src="js/main.js"></script> <!-- Resource jQuery -->
 	<style>
 		@import url('https://fonts.googleapis.com/css?family=Acme&display=swap');
-		</style>
-		<style>
-			@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
-			</style>
+	</style>
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
+	</style>
 </body>
 
 </html>
