--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 					<div class="Article1"><a href="mailto:jaime.hall.work@gmail.com"
 							title="Jaime Hall Mail">Mail:jaime.hall.work@gmail.com</a>
 						<p>Phone:+34661846744</p>
+						<p>Instagram:@jaimejoll</p>
+						<p>Twitter:@jaimejoll</p>
 					</div>
 				</div>
 			</div>
